Revert to optional property